syntax = "proto3";

package golem.component;

import public "golem/common/project_id.proto";
import public "golem/common/empty.proto";
import public "golem/component/component.proto";
import public "golem/component/component_error.proto";
import public "golem/component/component_id.proto";

service ComponentService {
  rpc GetComponents (GetComponentsRequest) returns (GetComponentsResponse);
  rpc CreateComponent (stream CreateComponentRequest) returns (CreateComponentResponse);
  rpc DownloadComponent (DownloadComponentRequest) returns (stream DownloadComponentResponse);
  rpc GetComponentMetadataAllVersions (GetComponentRequest) returns (GetComponentMetadataAllVersionsResponse);
  rpc GetLatestComponentMetadata (GetLatestComponentRequest) returns (GetComponentMetadataResponse);
  rpc UpdateComponent (stream UpdateComponentRequest) returns (UpdateComponentResponse);
  rpc GetComponentMetadata(GetVersionedComponentRequest) returns (GetComponentMetadataResponse);
}

message GetComponentsRequest {
  golem.common.ProjectId projectId = 1;
  optional string componentName = 2;
}

message GetComponentsResponse {
  oneof result {
    GetComponentsSuccessResponse success = 1;
    golem.component.ComponentError error = 2;
  }
}

message GetComponentsSuccessResponse {
  repeated golem.component.Component components = 1;
}

message CreateComponentRequest {
  oneof data {
    CreateComponentRequestHeader header = 1;
    CreateComponentRequestChunk chunk = 2;
  }
}

message CreateComponentRequestHeader {
  golem.common.ProjectId projectId = 1;
  string componentName = 2;
}

message CreateComponentRequestChunk {
  bytes componentChunk = 1;
}

message CreateComponentResponse {
  oneof result {
    golem.component.Component success = 1;
    golem.component.ComponentError error = 2;
  }
}

message DownloadComponentRequest {
  golem.component.ComponentId componentId = 1;
  optional uint64 version = 2;
}

message DownloadComponentResponse {
  oneof result {
    bytes successChunk = 1;
    golem.component.ComponentError error = 2;
  }
}

message GetComponentRequest {
  golem.component.ComponentId componentId = 1;
}

message GetVersionedComponentRequest {
  golem.component.ComponentId componentId = 1;
  uint64 version = 2;
}

message GetComponentMetadataAllVersionsResponse {
  oneof result {
    GetComponentSuccessResponse success = 1;
    golem.component.ComponentError error = 2;
  }
}

message GetComponentMetadataResponse {
  oneof result {
    GetComponentMetadataSuccessResponse success = 1;
    golem.component.ComponentError error = 2;
  }
}

message GetComponentMetadataSuccessResponse {
  optional golem.component.Component component = 1;
}

message GetComponentSuccessResponse {
  repeated golem.component.Component components = 1;
}

message GetLatestComponentRequest {
  golem.component.ComponentId componentId = 1;
}

message UpdateComponentRequest {
  oneof data {
    UpdateComponentRequestHeader header = 1;
    UpdateComponentRequestChunk chunk = 2;
  }
}

message UpdateComponentRequestHeader {
  golem.component.ComponentId componentId = 1;
}

message UpdateComponentRequestChunk {
  bytes componentChunk = 1;
}

message UpdateComponentResponse {
  oneof result {
    golem.component.Component success = 1;
    golem.component.ComponentError error = 2;
  }
}
